[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.poetry]
name = "GroupMe_Bot"
description="A simple groupme bot built to run within a docker container"
version = "0.1.0"
authors = ["Zachary Myers <zachmyers@woosterbrush.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
GroupyAPI = "^0.10.3"
atomicwrites = "^1.4.0"
google-api-python-client = "^2.17.0"
espn-api = "^0.16.1"

[tool.poetry.dev-dependencies]
black = ">=20.8b1"
flake8 = ">=3.9.2"
pytest = ">=6.2.4"
bump2version = ">=1.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
